feat: add emp stat visibility control
